src/style/components/_comment.scss
.ibs-comment {
	margin: 0.5rem 0;

	display: grid;
	grid-template-columns: 4rem 1fr;

	&--icon {
		width: 50px;
		height: 50px;
	}

	&--content {
		background-color: var(--color-comment-bg);
		padding: 0.25rem 0.5rem;
		border-radius: var(--border-radius);
		border-top-left-radius: 0;

		display: grid;
		grid-template-columns: auto 1fr;
		position: relative;

		// Add a halftrianlge to the left of the comment
		&::before {
			content: '';
			position: absolute;
			top: 0;
			left: -0.5rem;
			width: 0;
			height: 0;
			border-bottom: 1rem solid transparent;
			border-right: 1rem solid var(--color-comment-bg);
		}

		&--name {
			color: var(--color-primary);
		}

		&--date {
			font-size: small;
			color: var(--color-text-muted);
			text-align: right;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}

		&--comment {
			grid-column: span 2;
		}
	}

	@media (max-width: 600px) {
		&--content {
			grid-template-columns: 1fr;
			grid-template-rows: 1fr;
			gap: 0;

			&--name {
				margin-bottom: -0.5rem;
			}

			&--date {
				text-align: left;
			}

			&--comment {
				grid-column: span 1;
			}
		}
	}
}

